[package]
name = "rdhtindexer"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["Christoph Lemannczick"]

[dependencies]
bendy = {version = "0.6.1", features = ["serde"]}
serde = "1.0.0"
serde_derive = "1.0.0"
noalloc-vec-rs = "0.1.1"
rand = "0.9.2"
crc32c = "0.6.8"
oneshot = "0.1.11"
lazy_static = "1.5"

smol = "2"
log = "0.4.28"
thiserror = "2.0.17"
bitvec = "1"
event-listener = "5.4"

env_logger = "0.11.8"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

[features]
ips_validieren = []

[profile.dev.package."*"]
opt-level = 3
